# tradebot-app

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json
config/: service.yml
scripts/: generate-protos.js
src/: App.css  App.tsx  Chart.tsx  OrderTable.tsx  OverallPnlChart.tsx  PnlCalendar.tsx  PnlDayChart.tsx  PnlTimeChart.tsx  PositionPnlChart.tsx  Stats.tsx  StrategyNav.tsx  Toolbar.tsx  TotalPnlChart.tsx  types.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
